<resources>
    <string name="app_name">eStock</string>
    <string name="menu">Menu</string>
    <string name="house_menu">House Menu</string>
    <string name="house_name">House Name</string>
    <string name="inventory">Inventory</string>
    <string name="inventory_list">Inventory List</string>
    <string name="stock_adjustment">Stock Adjustment</string>
    <string name="export_inventory">Export Inventory</string>
    <string name="data_clear">Data Clear/Delete House</string>
    <string name="back">Back</string>
    <string name="new_house">New House</string>
    <string name="house_delete">House Delete</string>
    <string name="generate_excel">Generate Excel</string>
    <string name="setting">Setting</string>
    <string name="new_goods">New Goods</string>
    <string name="house_list">House List</string>
    <string name="house_name1">House Name :</string>
    <string name="delete_house">Delete House</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="generate_house_excel">Generate House Excel</string>
    <string name="generate_goods_list_excel">Generate Goods List Excel</string>
    <string name="input_new_name">Input New Name :</string>
    <string name="modify">Modify</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter">Enter</string>
    <string name="barcode">Barcode :</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="good_s_name">Description :</string>
    <string name="input_house_name">Input House Name :</string>
    <string name="enter_house_name">Enter House Name</string>
    <string name="disable_new_goods">Disable New Goods :</string>
    <string name="edit_spec">Edit Spec :</string>
    <string name="confirm">Confirm</string>
    <string name="input_barcode">Input Barcode :</string>
    <string name="enter_scan_barcode">Enter/Scan Barcode</string>
    <string name="next">Next</string>
    <string name="delete_this_house">Delete this house ?</string>
    <string name="input_name">Input Name(Description) :</string>
    <string name="enter_price">Enter price (RM)</string>
    <string name="totalqty">TotalQty :</string>
    <string name="total_quantity">Total qty</string>
    <string name="quantity">Qty :</string>
    <string name="inventory_s_quantity">Inventory\'s qty</string>
    <string name="name">Name :</string>
    <string name="price">Price (RM):</string>
    <string name="cost">Cost (RM):</string>
    <string name="inventory_s_name">Inventory\'s name</string>
    <string name="inventory_s_price">Inventory\'s Price (RM)</string>
    <string name="inventory_s_cost">Inventory\'s cost (RM)</string>
    <string name="enter_to_change_quantity">Enter to change qty</string>
    <string name="esc">ESC</string>
    <string name="change">Change</string>
    <string name="item_spec">Item Spec</string>
    <string name="item_spec_price">Item Spec Price (RM)</string>
    <string name="item_spec_cost">Item Spec Cost (RM)</string>
    <string name="input_cost">Input cost (RM):</string>
    <string name="enter_cost">Enter cost (RM)</string>
    <string name="search">Search</string>
    <string name="key1">Key1</string>
    <string name="generate_inventory_excel">Generate Inventory Excel</string>
    <string name="name1">Name</string>
    <string name="total_type">Total Type :</string>
    <string name="total_qty">Total Qty :</string>
    <string name="total_type1">Total Type</string>
    <string name="total_qty1">Total Qty</string>
    <string name="barcode1">Barcode</string>
    <string name="quantity1">Qty</string>
    <string name="data_and_time">Data and Time :</string>
    <string name="data_and_time1">Data and Time</string>
    <string name="price1">Price (RM)</string>
    <string name="sale_order">Sales Order</string>
    <string name="maintain_user">Maintain User</string>
    <string name="stock_take_menu">Stock Take Menu</string>
    <string name="to_be_update">To be Update</string>
    <string name="db_inventory">eStock</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="global_barcoding_technology_sdn_bhd">Global Barcoding Technology Sdn. Bhd.</string>
    <string name="powered_by">Powered By :</string>
    <string name="create_user">Create User</string>
    <string name="access_right">Access Right</string>
    <string name="admin_list">Admin List</string>
    <string name="user_list">User List</string>
    <string name="create">Create</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="role">Role:</string>
    <string name="role1">Role</string>
    <string name="cost1">Cost</string>
    <string name="disable_edit_spec">Disable Edit Spec:</string>
    <string name="create_new_house">Create new house</string>
    <string name="modify_delete">Modify/Delete</string>
    <string name="create_new_user">Create New User</string>
    <string name="role_user_or_admin">Role (User or Admin)</string>
    <string name="house_list_stock_in">House List (Stock In)</string>
    <string name="house_list_stock_out">House List (Stock Out)</string>
    <string name="item_cost">Item Cost (RM):</string>
    <string name="qty_in">Qty in</string>
    <string name="add_qty_in">Add qty in</string>
    <string name="house_qty">House Qty：</string>
    <string name="stock_out">Stock Out</string>
    <string name="stock_in">Stock In</string>
    <string name="input_price_rm">Input price (RM):</string>
    <string name="enter_description">Enter Description</string>

    //String for RFID reader
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">connect MCU</string>
    <string name="id">ID</string>
    <string name="count">count</string>
    <string name="start_inventory">Read</string>
    <string name="stop_inventory">Stop</string>
    <string name="clear">clear</string>
    <string name="membank">Membank</string>
    <string name="accesspassword">Access Password</string>
    <string name="addr">Address(word)</string>
    <string name="len">Length(word)</string>
    <string name="read">Read Tag</string>
    <string name="write">Write Tag</string>
    <string name="writedata">Write Data(HEX)</string>
    <string name="locktype">Lock Type</string>
    <string name="locktag">Lock Tag</string>
    <string name="kill">Kill Tag</string>
    <string name="killpassword">Kill Password</string>
    <string name="readdata">Read Data</string>
    <string name="parameterSetting">Parameter Setting</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="set">set</string>
    <string name="rfPower">RF power</string>
    <string name="workArea">Work Area</string>
    <string name="freqSetting">Freq setting</string>
    <string name="china2Freq">China2：920125kHz~924875kHz</string>
    <string name="usaFreq">USA：902250kHz~927750kHz</string>
    <string name="euFreq">Europe：865100kHz~867900kHz</string>
    <string name="china1Freq">China1：840125kHz~844875kHz</string>
    <string name="koreaFreq">Korea：917700kHz~923300kHz</string>
    <string name="setSuccess">Set success</string>
    <string name="freqNotNull">Frequency not null</string>
    <string name="PowerOn">PowerOn</string>
    <string name="PowerOff">PowerOff</string>
    <string name="new_btn">New</string>
    <string name="qty_out">Qty out</string>s
</resources>