<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".Inventory_step4">

    <TextView
        android:id="@+id/txt_new_house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="70dp"
        android:text="@string/inventory"
        android:textColor="@color/blue"
        android:textSize="80px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Inventory_TotalQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalqty"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/textView_Inventory_TotalQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/total_quantity"
            android:textColor="@color/blue" />


    </LinearLayout>

    <TextView
        android:id="@+id/txt_input_barcode4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/input_barcode"
        android:textColor="@color/blue"
        android:textSize="50px" />

    <EditText
        android:id="@+id/editText_Inventory_barcode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/blue_border"
        android:ems="10"
        android:hint="@string/enter_scan_barcode"
        android:inputType="textPersonName"
        android:paddingLeft="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_inventory_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:text="@string/quantity"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/textView_Inventory_Qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/inventory_s_quantity"
            android:textColor="@color/blue" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Inventory_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:text="@string/name"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/textView_Inventory_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/inventory_s_name"
            android:textColor="@color/blue" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Inventory_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:text="@string/price"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/textView_Inventory_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/inventory_s_price"
            android:textColor="@color/blue" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Inventory_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:text="@string/cost"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/textView_Inventory_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/inventory_s_cost"
            android:textColor="@color/blue" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Inventory_esc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:width="300dp"
            android:backgroundTint="@color/blue"
            android:text="@string/esc"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_Inventory_enter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:width="300dp"
            android:backgroundTint="@color/blue"
            android:text="@string/enter"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>