<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".Item_Spec">

    <TextView
        android:textColor="@color/blue"
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/item_spec"
        android:textSize="100px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp">

        <TextView
            android:textColor="@color/blue"
            android:id="@+id/tv_price_spec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/price" />

        <TextView
            android:textColor="@color/blue"
            android:id="@+id/textView_Item_Spec_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="3"
            android:text="@string/item_spec_price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:textColor="@color/blue"
            android:id="@+id/tv_cost_spec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/cost" />

        <TextView
            android:textColor="@color/blue"
            android:id="@+id/textView_Item_Spec_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="3"
            android:text="@string/item_spec_cost" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <Button
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:id="@+id/btn_Item_Spec_Esc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:text="@string/esc"
            android:width="100dp"
            />

        <Button
            android:id="@+id/btn_Item_Spec_Enter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:width="100dp"/>

    </LinearLayout>



</LinearLayout>